fixed timeline alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1661,227 +1661,68 @@ input, select, textarea {
 		}
 
 /*Timeline CSS*/
-		.cd-container {
-			width: 	100%;
-			max-width: 1080px;
-			margin: 0 auto;
-			background: #2b343a;
-			padding: 0 10%;
-			border-radius: 2px;
-	   }
-		.cd-container::after {
-			content: '';
-			display: table;
-			clear: both;
-	   }
-/* -------------------------------- Main components -------------------------------- */
-		#cd-timeline {
-			position: relative;
-			padding: 2em 0;
-			margin-top: 2em;
-			margin-bottom: 2em;
-	   }
-		#cd-timeline::before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 25px;
-			height: 100%;
-			width: 4px;
-			background: #7e57c2;
-	   }
-		@media only screen and (min-width: 1170px) {
-			#cd-timeline {
-				margin-top: 3em;
-				margin-bottom: 3em;
-		   }
-			#cd-timeline::before {
-				left: 50%;
-				margin-left: -2px;
-		   }
-	   }
-		.cd-timeline-block {
-			position: relative;
-			margin: 2em 0;
-	   }
-		.cd-timeline-block:after {
-			content: "";
-			display: table;
-			clear: both;
-	   }
-		.cd-timeline-block:first-child {
-			margin-top: 0;
-	   }
-		.cd-timeline-block:last-child {
-			margin-bottom: 0;
-	   }
-		@media only screen and (min-width: 1170px) {
-			.cd-timeline-block {
-				margin: 4em 0;
-		   }
-			.cd-timeline-block:first-child {
-				margin-top: 0;
-		   }
-			.cd-timeline-block:last-child {
-				margin-bottom: 0;
-		   }
-	   }
-		.cd-timeline-img {
-			position: absolute;
-			top: 8px;
-			left: 50px;
-			width: 30px;
-			height: 30px;
-			border-radius: 50%;
-			box-shadow: 0 0 0 4px #57a9c2, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
-	   }
-		.cd-timeline-img {
-			background: #b73a3a;
-	   }
-		@media only screen and (min-width: 1170px) {
-			.cd-timeline-img {
-				width: 30px;
-				height: 30px;
-				left: 45.5%;
-				margin-left: -15px;
-				margin-top: 15px;
-			   /* Force Hardware Acceleration in WebKit */
-				-webkit-transform: translateZ(0);
-				-webkit-backface-visibility: hidden;
-		   }
-	   }
-		.cd-timeline-content {
-			position: relative;
-			margin-left: 60px;
-			margin-right: 30px;
-			background: #333c42;
-			border-radius: 2px;
-			padding: 1em;
-	   }
-		.cd-timeline-content .timeline-content-info {
-			background: #2b343a;
-			padding: 5px 10px;
-			color: rgba(255, 255, 255, 0.7);
-			font-size: 12px;
-			box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.08);
-			border-radius: 2px;
-	   }
-		.cd-timeline-content .timeline-content-info i {
-			margin-right: 5px;
-	   }
-		.cd-timeline-content .timeline-content-info .timeline-content-info-title, .cd-timeline-content .timeline-content-info .timeline-content-info-date {
-			width: calc(50% - 2px);
-			display: inline-block;
-	   }
-		@media (max-width: 500px) {
-			.cd-timeline-content .timeline-content-info .timeline-content-info-title, .cd-timeline-content .timeline-content-info .timeline-content-info-date {
-				display: block;
-				width: 100%;
-		   }
-	   }
-		.cd-timeline-content .content-skills {
-			font-size: 12px;
-			padding: 0;
-			margin-bottom: 0;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-	   }
-		.cd-timeline-content .content-skills li {
-			background: #40484d;
-			border-radius: 2px;
-			display: inline-block;
-			padding: 2px 10px;
-			color: rgba(255, 255, 255, 0.7);
-			margin: 3px 2px;
-			text-align: center;
-			flex-grow: 1;
-	   }
-		.cd-timeline-content:after {
-			content: "";
-			display: table;
-			clear: both;
-	   }
-		.cd-timeline-content h2 {
-			color: rgba(255, 255, 255, .9);
-			margin-top: 0;
-			margin-bottom: 5px;
-	   }
-		.cd-timeline-content p, .cd-timeline-content .cd-date {
-			color: rgba(255, 255, 255, .7);
-			font-size: 13px;
-			font-size: 0.8125rem;
-	   }
-		.cd-timeline-content .cd-date {
-			display: inline-block;
-	   }
-		.cd-timeline-content p {
-			margin: 1em 0;
-			line-height: 1.6;
-	   }
-		.cd-timeline-content::before {
-			content: '';
-			position: absolute;
-			top: 16px;
-			right: 100%;
-			height: 0;
-			width: 0;
-			border: 7px solid transparent;
-			border-right: 7px solid #333c42;
-	   }
-		@media only screen and (min-width: 768px) {
-			.cd-timeline-content h2 {
-				font-size: 20px;
-				font-size: 1.25rem;
-		   }
-			.cd-timeline-content p {
-				font-size: 16px;
-				font-size: 1rem;
-		   }
-			.cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-				font-size: 14px;
-				font-size: 0.875rem;
-		   }
-	   }
-		@media only screen and (min-width: 1170px) {
-			.cd-timeline-content {
-				color: white;
-				margin-left: 0;
-				padding: 1.6em;
-				width: 36%;
-				margin: 0 5%;
-		   }
-			.cd-timeline-content::before {
-				top: 24px;
-				left: 100%;
-				border-color: transparent;
-				border-left-color: #333c42;
-		   }
-			.cd-timeline-content .cd-date {
-				position: absolute;
-				width: 100%;
-				left: 122%;
-				top: 6px;
-				font-size: 16px;
-				font-size: 1rem;
-		   }
-			.cd-timeline-block:nth-child(even) .cd-timeline-content {
-				float: right;
-		   }
-			.cd-timeline-block:nth-child(even) .cd-timeline-content::before {
-				top: 24px;
-				left: auto;
-				right: 100%;
-				border-color: transparent;
-				border-right-color: #333c42;
-		   }
-			.cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
-				float: right;
-		   }
-			.cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
-				left: auto;
-				right: 122%;
-				text-align: right;
-		   }
-	   }
-		
+/* Styling */
+
+.timeline {
+	position: relative;
+	max-width: 46em;
+  }
+  .timeline:before {
+	background-color: #326fa8;
+	content: '';
+	margin-left: -1px;
+	position: absolute;
+	top: 0;
+	left: 2em;
+	width: 2px;
+	height: 100%;
+  }
+  
+  .timeline-event {
+	position: relative;
+  }
+
+  .timeline-event:hover .timeline-event-thumbnail {
+	-moz-box-shadow: inset 40em 0 0 0 #326fa8;
+	-webkit-box-shadow: inset 40em 0 0 0 #326fa8;
+	box-shadow: inset 40em 0 0 0 #326fa8;
+  }
+  
+  .timeline-event-copy {
+	
+	padding: 0em;
+	position: relative;
+	left: 4em;
+	width: 80%;
+  }
+  .timeline-event-copy h3 {
+	font-size: 1.75em;
+  }
+  .timeline-event-copy h4 {
+	font-size: 1.2em;
+	margin-bottom: 0;
+  }
+  .timeline-event-copy strong {
+	font-weight: 700;
+  }
+  .timeline-event-copy p:not(.timeline-event-thumbnail) {
+	padding-bottom: 1.2em;
+  }
+  
+  
+  .timeline-event-thumbnail {
+	-moz-transition: box-shadow 0.5s ease-in 0.1s;
+	-o-transition: box-shadow 0.5s ease-in 0.1s;
+	-webkit-transition: box-shadow 0.5s ease-in;
+	-webkit-transition-delay: 0.1s;
+	transition: box-shadow 0.5s ease-in 0.1s;
+	color: white;
+	font-size: 0.75em;
+	background-color: black;
+	-moz-box-shadow: inset 0 0 0 0em #8de2d7;
+	-webkit-box-shadow: inset 0 0 0 0em #8de2d7;
+	box-shadow: inset 0 0 0 0em #8de2d7;
+	display: inline-block;
+	margin-bottom: 1.2em;
+	padding: 0.25em 1em 0.2em 1em;
+  }
